Fixed line endings and added endorsed dirs for JAXB overrides in scripts. Updated documentation to remove raw runnable JAR example.
git-svn-id: https://svnserv.csiro.au/svn/ext/GeoSciML@2394 910a3654-de2c-0410-bd95-d62e98ccebcd